plugins {
    id 'java'
    id 'application'
    id "org.sonarqube" version "6.3.1.5724"
    id "com.github.ben-manes.versions" version "0.53.0"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDirs "src/resources"
        }
    }

    test {
        java {
            srcDir 'test/java'
        }
        resources {
            srcDirs "test/resources"
            exclude "**/*.java"
        }
    }
}

sourceSets.test.resources

dependencies {
    implementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation 'com.github.therapi:therapi-runtime-javadoc:0.15.0'
    implementation 'com.github.therapi:therapi-runtime-javadoc-scribe:0.15.0'
    implementation 'info.picocli:picocli:4.7.7'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.github.gestalt-config:gestalt-core:0.36.0'
    implementation 'com.github.gestalt-config:gestalt-yaml:0.36.0'
    implementation 'com.google.flogger:flogger:0.9'
    implementation 'com.google.flogger:flogger-system-backend:0.9'
    implementation 'org.pitest:pitest:1.20.6'
    implementation 'org.pitest:pitest-entry:1.20.6'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
}

application {
    mainClass = 'chalkbox.ChalkBox'
}

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.implementation
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    archiveBaseName = project.name
}

tasks.register('fatJar', Jar) {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    archiveBaseName = project.name + '-all'
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
